change on index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td>
           <h1>Faisal Abdulaziz</h1>
         <p><em>Computer Scince Student in <a href="https://imamu.edu.sa/en/Pages/default.aspx"><strong>Imamu</strong> University</a><em></p>
-        <p> Im a Computer Scince Major Student, Web Develepor soon to be and a pro player</p>
+        <p> Im a Computer Scince Major Student, Web Develepor and a pro player</p>
         </td>
       </tr>
     </table>
@@ -33,7 +33,7 @@
       <li>The Complete Web Develpment Bootcamp</li>
 
     </ul>
-  <h4><a href="hobbies.html"> My Hobbies</a>, <a href="CONTACT.html">Contact Me</a>  <a href="inputs.html">Types of inputs</a></h4>
+  <h4><a href="hobbies.html"> My Hobbies</a>, <a href="CONTACT.html">Contact Me</a>  </h4>
 
 <hr>
 <h3>CAR VERY BUSSIN IS TALKING TO ME FOR SOME REASON!!!</h3>
@@ -66,13 +66,10 @@
 
 <tbody>
   <tr>
-    <td>Phone Tech ⭐⭐⭐⭐⭐</td>
-    <td>HTML ⭐⭐⭐</td>
+    <td>Programming ⭐⭐⭐⭐⭐</td>
+    <td>Web Develepment ⭐⭐⭐⭐⭐</td>
   </tr>
-  <tr>
-    <td>CSS ⭐</td>
-    <td>JavaScript  </td>
-  </tr>
+
 
 
   </tbody>
