--- a/index.html
+++ b/index.html
@@ -1,83 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans+Arabic:wght@500&family=Montserrat:ital,wght@1,100&family=Smooch&display=swap" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Faisal Personal Site</title>
+    <title>Faisal Abdulaziz</title>
   </head>
   <body>
-    <table cellspacing="30">
-      <tr>
-        <td><img src="images/HYPERS.jpg" alt="cute pepo happy"></td>
-        <td>
-          <h1>Faisal Abdulaziz</h1>
-        <p><em>Computer Scince Student in <a href="https://imamu.edu.sa/en/Pages/default.aspx"><strong>Imamu</strong> University</a><em></p>
-        <p> Im a Computer Scince Major Student, Web Develepor and a pro player</p>
-        </td>
-      </tr>
-    </table>
-
-    <hr size="3" noshade>
-    <h3>Education & Courses</h3>
-    <ul><!-- this is an unorderd list -->
-      <li>Imamu University<ul>
-        <li>First Year 4.93 GPA</li>
-        <li>Second Year 3.36 GPA</li>
-        <li>Thrid Year 4.34</li>
-      </ul></li>
-      <li>High school <ul>
-        <li>First Year 88%</li>
-        <li>Second Year 97%</li>
-        <li>Thrid 100%</li>
-      </ul></li>
-      <h4>Courses:</h4>
-      <li>The Complete Web Develpment Bootcamp</li>
-
-    </ul>
-  <h4><a href="hobbies.html"> My Hobbies</a>, <a href="CONTACT.html">Contact Me</a>  </h4>
-
-<hr>
-<h3>CAR VERY BUSSIN IS TALKING TO ME FOR SOME REASON!!!</h3>
-<img src="images/orange E30 sick.jpg" width="300" hight="300">
-
-<hr size="3" noshade>
-<h3>Education Experience</h3>
-<table border="1">
-  <thead>
-    <th>Dates</th>
-    <th>Education</th>
-  </thead>
-  <tbody>
-    <tr>
-      <td>2017-2019</td>
-      <td>High School Education</td>
-    </tr>
-    <tr>
-      <td>2020</td>
-      <td>Imamu University</td>
-    </tr>
-  </tbody>
-</table>
-
-<hr>
-
-<h3><em>Skills</em></h3>
-
-<table cellspacing="10">
-
-<tbody>
-  <tr>
-    <td>Programming ⭐⭐⭐⭐⭐</td>
-    
-  </tr> 
-  <tr>
-  <td>Web Develepment ⭐⭐⭐⭐⭐</td>
-  </tr>
+    <div class="top-container">
+<img class="top-cloud" src="images/cloud.png" alt="">
+          <h1 class="my_name">I'm Faisal</h1>
+          <h2>im a programmer, the best programmer</h2>
+<img class="bottom-cloud" src="images/cloud.png" alt="">
+          <img src="images/mountain.png" alt="">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/41IKUdeGY7L._SR600%2C315_PIWhiteStrip%2CBottomLeft%2C0%2C35_SCLZZZZZZZ_FMpng_BG255%2C255%2C255.jpg" alt="">
+        <h2>Hello.</h2>
+        <p>I'm a Web developer and i love gaming<3</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="code-img" src="https://cdn-icons-png.flaticon.com/512/1005/1005141.png" alt="">
+          <h3>Web Developing</h3>
+          <p class="photo-description-cl">When i was in middle school i loved coding,started when i was in highscool coding python, then in college we started java and finished it all, now im playing with web developing to test my limits,and luckly its easy.</p>
+        </div>
+        <div class="skill-row">
+          <img class="stars-img" src="https://cdn-icons.flaticon.com/png/512/2314/premium/2314909.png?token=exp=1656932600~hmac=b1b986393be0b9cd2e56c3580f902b35" alt="">
+          <h3>Gaming</h3>
+          <p class="photo-description-cr">my Actual skill is gaming, im a warlord, GODLIKE, BEST PLAYER, GAMING MECHINE, FAST LEARNER, BEST AT EVERY GAME I PLAY.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
 
 
-  </tbody>
-
-</table>
-
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn       </a>
+      <a class="footer-link" href="https://twitter.com/">    Twitter </a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="caption">© Faisal Abdulaziz.</p>
+    </div>
 
   </body>
 </html>
